feat: change name, structure buttons, more UX elems

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Crossy Road",
-    "slug": "crossyroad",
+    "name": "STKSY",
+    "slug": "stksy",
     "privacy": "public",
     "orientation": "portrait",
     "primaryColor": "#87C6FF",
